fix frontend and add  SignIn Document

--- a/backend/.env
+++ b/backend/.env
@@ -26,3 +26,6 @@ OPENWEBUI_API_KEY=
 # Optional services
 REDIS_URL=redis://redis:6379/0
 SENTRY_DSN=
+
+# Frontend
+VITE_API_BASE_URL=http://localhost:8000
