fix size display and Signin

--- a/backend/.env
+++ b/backend/.env
@@ -23,6 +23,16 @@ MAX_UPLOAD_SIZE_MB=50
 OPENWEBUI_URL=http://10.35.29.103:3000
 OPENWEBUI_API_KEY=
 
+# Email verification (SMTP)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=chatcpe36@gmail.com
+SMTP_PASS=pocj fnbd xfyz zskx
+SMTP_FROM=chatcpe36@gmail.com
+BACKEND_BASE_URL=http://localhost:8000
+APP_BASE_URL=http://localhost:8080
+VERIFY_TOKEN_EXPIRE_HOURS=24
+
 # Optional services
 REDIS_URL=redis://redis:6379/0
 SENTRY_DSN=
